...
            replacedTempLecture = true;
            return lectureWithCount;
          });

          return replacedTempLecture ? nextLectures : [lectureWithCount, ...nextLectures];
        });
        alert("Success", "Lecture created successfully!", [{ text: "OK" }]);
        await context.client.invalidateQueries({
          queryKey: queryKeys.lectures.teacher,
          refetchType: "none",
        });
      } else {
        context.client.setQueryData(queryKeys.lectures.teacher, onMutateResult.previousLectures);
...
